--- a/bacula/bacula-fd.conf
+++ b/bacula/bacula-fd.conf
@@ -1,7 +1,7 @@
 #
 # Default  Bacula File Daemon Configuration file
 #
-#  For Bacula release 5.2.6 (21 February 2012) -- ubuntu 12.10
+#  For Bacula release 5.0.0 (26 January 2010) -- redhat 
 #
 # There is not much to change here except perhaps the
 # File daemon Name to
@@ -11,8 +11,8 @@
 # List Directors who are permitted to contact this File daemon
 #
 Director {
-  Name = chris-r61i-dir
-  Password = "DOWOFyQPI0m31-aI0iVsEBr-1FjhFLOiv"
+  Name = bacula-dir
+  Password = "racine"
 }
 
 #
@@ -20,8 +20,8 @@ Director {
 #   status of the file daemon
 #
 Director {
-  Name = chris-r61i-mon
-  Password = "1y4kmqP3ELZWHLG3cCzBYNZi4xTMUgk2g"
+  Name = bacula-mon
+  Password = "racine"
   Monitor = yes
 }
 
@@ -29,16 +29,15 @@ Director {
 # "Global" File daemon configuration specifications
 #
 FileDaemon {                          # this is me
-  Name = chris-r61i-fd
-  FDport = 9102                  # where we listen for the director
-  WorkingDirectory = /var/lib/bacula
-  Pid Directory = /run/bacula
+  Name = testchris1
+  FDport = 9102
+  WorkingDirectory = /var/spool/bacula
+  Pid Directory = /var/run
   Maximum Concurrent Jobs = 20
-  FDAddress = 127.0.0.1
 }
 
 # Send all messages except skipped files back to Director
 Messages {
   Name = Standard
-  director = chris-r61i-dir = all, !skipped, !restored
+  director = bacula-dir = all, !skipped, !restored
 }
