--- a/bacula/bacula-sd.conf
+++ b/bacula/bacula-sd.conf
@@ -1,7 +1,7 @@
 #
 # Default Bacula Storage Daemon Configuration file
 #
-#  For Bacula release 5.2.6 (21 February 2012) -- ubuntu 12.10
+#  For Bacula release 5.0.0 (26 January 2010) -- redhat 
 #
 # You may need to change the name of your tape drive
 #   on the "Archive Device" directive in the Device
@@ -11,20 +11,19 @@
 #
 
 Storage {                             # definition of myself
-  Name = chris-r61i-sd
-  SDPort = 9103                  # Director's port      
-  WorkingDirectory = "/var/lib/bacula"
-  Pid Directory = "/run/bacula"
+  Name = bacula-sd
+  SDport = 9103
+  WorkingDirectory = /var/spool/bacula
+  Pid Directory = "/var/run"
   Maximum Concurrent Jobs = 20
-  SDAddress = 127.0.0.1
 }
 
 #
 # List Directors who are permitted to contact Storage daemon
 #
 Director {
-  Name = chris-r61i-dir
-  Password = "n5hMsqxx09f0VoxD0V4Fq5oZ3UIZEV-i3"
+  Name = bacula-dir
+  Password = "racine"
 }
 
 #
@@ -32,8 +31,8 @@ Director {
 #   status of the storage daemon
 #
 Director {
-  Name = chris-r61i-mon
-  Password = "7y6pfq8oJk6HZ2_8_jMFj3ik62MXCfu-v"
+  Name = bacula-mon
+  Password = "racine"
   Monitor = yes
 }
 
@@ -53,7 +52,7 @@ Director {
 Device {
   Name = FileStorage
   Media Type = File
-  Archive Device = /home/chris/bacula/test/dev
+  Archive Device = /tmp
   LabelMedia = yes;                   # lets Bacula label unlabeled media
   Random Access = Yes;
   AutomaticMount = yes;               # when device opened, read it
@@ -68,7 +67,7 @@ Device {
 #  Name = Autochanger
 #  Device = Drive-1
 #  Device = Drive-2
-#  Changer Command = "/etc/bacula/scripts/mtx-changer %c %o %S %a %d"
+#  Changer Command = "/usr/libexec/bacula/mtx-changer %c %o %S %a %d"
 #  Changer Device = /dev/sg0
 #}
 
@@ -122,7 +121,7 @@ Device {
 #  RemovableMedia = yes;
 #  RandomAccess = no;
 #  Maximum File Size = 3GB
-## Changer Command = "/etc/bacula/scripts/mtx-changer %c %o %S %a %d"
+## Changer Command = "/usr/libexec/bacula/mtx-changer %c %o %S %a %d"
 ## Changer Device = /dev/sg0
 ## AutoChanger = yes
 #  # Enable the Alert command only if you have the mtx package loaded
@@ -143,7 +142,7 @@ Device {
 #  RemovableMedia = yes;
 #  RandomAccess = no;
 #  Maximum File Size = 4GB
-## Changer Command = "/etc/bacula/scripts/mtx-changer %c %o %S %a %d"
+## Changer Command = "/usr/libexec/bacula/mtx-changer %c %o %S %a %d"
 ## Changer Device = /dev/sg0
 ## AutoChanger = yes
 #  # Enable the Alert command only if you have the mtx package loaded
@@ -164,7 +163,7 @@ Device {
 #  RemovableMedia = yes;
 #  RandomAccess = no;
 #  Maximum File Size = 5GB
-## Changer Command = "/etc/bacula/scripts/mtx-changer %c %o %S %a %d"
+## Changer Command = "/usr/libexec/bacula/mtx-changer %c %o %S %a %d"
 ## Changer Device = /dev/sg0
 ## AutoChanger = yes
 #  # Enable the Alert command only if you have the mtx package loaded
@@ -202,5 +201,27 @@ Device {
 #
 Messages {
   Name = Standard
-  director = chris-r61i-dir = all
+  director = bacula-dir = all
+}
+
+Device {
+  Name = btest1
+  Archive Device = /home/bacula/t1
+  Media Type = File
+  LabelMedia = yes
+  Random Access = yes
+  AutomaticMount = yes
+  RemovableMedia = no
+  AlwaysOpen = no
+}
+
+Device {
+  Name = btest2
+  Archive Device = /home/bacula/t2
+  Media Type = File
+  LabelMedia = yes
+  Random Access = yes
+  AutomaticMount = yes
+  RemovableMedia = no
+  AlwaysOpen = no
 }
