--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -24,19 +24,19 @@ Director {                            # define myself
   DirAddress = 127.0.0.1
 }
 
-JobDefs {
-  Name = "DefaultJob"
-  Type = Backup
-  Level = Incremental
-  Client = chris-r61i-fd
-  FileSet = "Full Set"
-  Schedule = "WeeklyCycle"
-  Storage = File
-  Messages = Standard
-  Pool = File
-  Priority = 10
-  Write Bootstrap = "/var/lib/bacula/%c.bsr"
-}
+#JobDefs {
+#  Name = "DefaultJob"
+#  Type = Backup
+#  Level = Incremental
+#  Client = chris-r61i-fd
+#  FileSet = "Full Set"
+#  Schedule = "WeeklyCycle"
+#  Storage = File
+#  Messages = Standard
+#  Pool = File
+#  Priority = 10
+#  Write Bootstrap = "/var/lib/bacula/%c.bsr"
+#}
 
 
 #
@@ -53,9 +53,9 @@ Job {
 	Level = Full
 	Client = chris-r61i-fd
 	FileSet = "TEST_FILE_SET"
-	Storage = File
+	Storage = POOL1
     Messages = Standard
-    Pool = File
+    Pool = POOL1
     Priority = 10
     Write Bootstrap = "/var/lib/bacula/%c.bsr"
 }
@@ -67,76 +67,77 @@ Job {
 #}
 
 # Backup the catalog database (after the nightly save)
-Job {
-  Name = "BackupCatalog"
-  JobDefs = "DefaultJob"
-  Level = Full
-  FileSet="Catalog"
-  Schedule = "WeeklyCycleAfterBackup"
-  # This creates an ASCII copy of the catalog
-  # Arguments to make_catalog_backup.pl are:
-  #  make_catalog_backup.pl <catalog-name>
-  RunBeforeJob = "/etc/bacula/scripts/make_catalog_backup.pl MyCatalog"
-  # This deletes the copy of the catalog
-  RunAfterJob  = "/etc/bacula/scripts/delete_catalog_backup"
-  Write Bootstrap = "/var/lib/bacula/%n.bsr"
-  Priority = 11                   # run after main backup
-}
+#Job {
+#  Name = "BackupCatalog"
+#  JobDefs = "DefaultJob"
+#  Level = Full
+#  FileSet="Catalog"
+#  Schedule = "WeeklyCycleAfterBackup"
+#  # This creates an ASCII copy of the catalog
+#  # Arguments to make_catalog_backup.pl are:
+#  #  make_catalog_backup.pl <catalog-name>
+#  RunBeforeJob = "/etc/bacula/scripts/make_catalog_backup.pl MyCatalog"
+#  # This deletes the copy of the catalog
+#  RunAfterJob  = "/etc/bacula/scripts/delete_catalog_backup"
+#  Write Bootstrap = "/var/lib/bacula/%n.bsr"
+#  Priority = 11                   # run after main backup
+#}
 
 #
 # Standard Restore template, to be changed by Console program
 #  Only one such job is needed for all Jobs/Clients/Storage ...
 #
-Job {
-  Name = "RestoreFiles"
-  Type = Restore
-  Client=chris-r61i-fd
-  FileSet="Full Set"                  
-  Storage = File                      
-  Pool = Default
-  Messages = Standard
-  Where = /home/chris/bacula/test/recup
-}
+#Job {
+#  Name = "RestoreFiles"
+#  Type = Restore
+#  Client=chris-r61i-fd
+#  FileSet="Full Set"                  
+#  Storage = File                      
+#  Pool = Default
+#  Messages = Standard
+#  Where = /home/chris/bacula/test/recup
+#}
 
 
-# List of files to be backed up
-FileSet {
-  Name = "Full Set"
-  Include {
-    Options {
-      signature = MD5
-    }
-#    
-#  Put your list of files here, preceded by 'File =', one per line
-#    or include an external list with:
+## List of files to be backed up
+#FileSet {
+#  Name = "Full Set"
+#  Include {
+#    Options {
+#      signature = MD5
+#    }
+##    
+##  Put your list of files here, preceded by 'File =', one per line
+##    or include an external list with:
+##
+##    File = <file-name
+##
+##  Note: / backs up everything on the root partition.
+##    if you have other partitions such as /usr or /home
+##    you will probably want to add them too.
+##
+##  By default this is defined to point to the Bacula binary
+##    directory to give a reasonable FileSet to backup to
+##    disk storage during initial testing.
+##
+#    File = /home/chris/bacula/test/a_sauver
+#  }
 #
-#    File = <file-name
+##
+## If you backup the root directory, the following two excluded
+##   files can be useful
+##
+#  Exclude {
+#    File = /var/lib/bacula
+#    File = /nonexistant/path/to/file/archive/dir
+#    File = /proc
+#    File = /tmp
+#    File = /.journal
+#    File = /.fsck
+#  }
+#}
 #
-#  Note: / backs up everything on the root partition.
-#    if you have other partitions such as /usr or /home
-#    you will probably want to add them too.
-#
-#  By default this is defined to point to the Bacula binary
-#    directory to give a reasonable FileSet to backup to
-#    disk storage during initial testing.
-#
-    File = /home/chris/bacula/test/a_sauver
-  }
-
-#
-# If you backup the root directory, the following two excluded
-#   files can be useful
-#
-  Exclude {
-    File = /var/lib/bacula
-    File = /nonexistant/path/to/file/archive/dir
-    File = /proc
-    File = /tmp
-    File = /.journal
-    File = /.fsck
-  }
-}
-#
+ 
 # MON FILE SET
 FileSet {
   Name = "TEST_FILE_SET"
@@ -144,7 +145,7 @@ FileSet {
     Options {
       signature = MD5
     }
-    File = /home/chris/bacula/test/a_sauver
+    File = /home/chris/Bureau/DVP/chris-bacula-test/bacula/test/a_sauver
   }
   Exclude {
   }
@@ -154,29 +155,29 @@ FileSet {
 # When to do the backups, full backup on first sunday of the month,
 #  differential (i.e. incremental since full) every other sunday,
 #  and incremental backups other days
-Schedule {
-  Name = "WeeklyCycle"
-  Run = Full 1st sun at 23:05
-  Run = Differential 2nd-5th sun at 23:05
-  Run = Incremental mon-sat at 23:05
-}
+#Schedule {
+#  Name = "WeeklyCycle"
+#  Run = Full 1st sun at 23:05
+#  Run = Differential 2nd-5th sun at 23:05
+#  Run = Incremental mon-sat at 23:05
+#}
 
 # This schedule does the catalog. It starts after the WeeklyCycle
-Schedule {
-  Name = "WeeklyCycleAfterBackup"
-  Run = Full sun-sat at 23:10
-}
+#Schedule {
+#  Name = "WeeklyCycleAfterBackup"
+#  Run = Full sun-sat at 23:10
+#}
 
-# This is the backup of the catalog
-FileSet {
-  Name = "Catalog"
-  Include {
-    Options {
-      signature = MD5
-    }
-    File = "/var/lib/bacula/bacula.sql"
-  }
-}
+## This is the backup of the catalog
+#FileSet {
+#  Name = "Catalog"
+#  Include {
+#    Options {
+#      signature = MD5
+#    }
+#    File = "/var/lib/bacula/bacula.sql"
+#  }
+#}
 
 # Client (File Services) to backup
 Client {
@@ -208,16 +209,14 @@ Client {
 
 # Definition of file storage device
 Storage {
-  Name = File
+  Name = POOL1
 # Do not use "localhost" here    
   Address = chris-r61i # N.B. Use a fully qualified name here
   SDPort = 9103
   Password = "n5hMsqxx09f0VoxD0V4Fq5oZ3UIZEV-i3"
-  Device = FileStorage
+  Device = POOL1
   Media Type = File
 }
-
-
 
 # Definition of DDS tape storage device
 #Storage {
@@ -314,15 +313,16 @@ Pool {
 
 # File Pool definition
 Pool {
-  Name = File
+  Name = POOL1
   Pool Type = Backup
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
   Volume Retention = 365 days         # one year
   Maximum Volume Bytes = 1G          # Limit Volume size to something reasonable
   Maximum Volumes = 5               # Limit number of Volumes in Pool
+  Volume Use Duration = 23h
+  LabelFormat = "POOL1"
 }
-
 
 # Scratch pool definition
 Pool {
