--- a/bacula/bacula-sd.conf
+++ b/bacula/bacula-sd.conf
@@ -51,9 +51,9 @@ Director {
 #
 
 Device {
-  Name = FileStorage
+  Name = POOL1
   Media Type = File
-  Archive Device = /home/chris/bacula/test/dev
+  Archive Device = /home/chris/Bureau/DVP/chris-bacula-test/bacula/test/dev
   LabelMedia = yes;                   # lets Bacula label unlabeled media
   Random Access = Yes;
   AutomaticMount = yes;               # when device opened, read it
