Sauvegarde 1 fois / jour a 18h30 sur un volume

--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -54,6 +54,7 @@ Job {
 	Client = chris-r61i-fd
 	FileSet = "TEST_FILE_SET"
 	Storage = POOL1
+    Schedule = "TOUT_LES_JOURS"
     Messages = Standard
     Pool = POOL1
     Priority = 10
@@ -163,10 +164,10 @@ FileSet {
 #}
 
 # This schedule does the catalog. It starts after the WeeklyCycle
-#Schedule {
-#  Name = "WeeklyCycleAfterBackup"
-#  Run = Full sun-sat at 23:10
-#}
+Schedule {
+  Name = "TOUT_LES_JOURS"
+  Run = Full mon-sun at 18:30
+}
 
 ## This is the backup of the catalog
 #FileSet {
@@ -317,11 +318,12 @@ Pool {
   Pool Type = Backup
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
-  Volume Retention = 365 days         # one year
-  Maximum Volume Bytes = 1G          # Limit Volume size to something reasonable
-  Maximum Volumes = 5               # Limit number of Volumes in Pool
+  #Volume Retention = 365 days         # one year
+  #Maximum Volume Bytes = 1G          # Limit Volume size to something reasonable
+  #Maximum Volumes = 5               # Limit number of Volumes in Pool
   Volume Use Duration = 23h
-  LabelFormat = "POOL1"
+  UseVolumeOnce = yes
+  LabelFormat = "SAV-${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}"
 }
 
 # Scratch pool definition
