Config TESTCHRIS1 => plusieurs clients Chaque job ecrit dans un volume => le client windows cree des problemes (sans lui cela fonctionne) exempl de parametrage avec sauvegarde tt les 5 minutes

--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -23,19 +23,19 @@ Director {                            # define myself
   Messages = Daemon
 }
 
-JobDefs {
-  Name = "DefaultJob"
-  Type = Backup
-  Level = Incremental
-  #Client = bacula-fd 
-  FileSet = "Full Set"
-  Schedule = "WeeklyCycle"
-  Storage = File
-  Messages = Standard
-  Pool = File
-  Priority = 10
-  Write Bootstrap = "/var/spool/bacula/%c.bsr"
-}
+#JobDefs {
+#  Name = "DefaultJob"
+#  Type = Backup
+#  Level = Incremental
+#  #Client = bacula-fd 
+#  FileSet = "Full Set"
+#  Schedule = "WeeklyCycle"
+#  Storage = File
+#  Messages = Standard
+#  Pool = File
+#  Priority = 10
+#  Write Bootstrap = "/var/spool/bacula/%c.bsr"
+#}
 
 
 #
@@ -53,104 +53,104 @@ JobDefs {
 #}
 
 # Backup the catalog database (after the nightly save)
-Job {
-  Name = "BackupCatalog"
-  JobDefs = "DefaultJob"
-  Client = testchris1
-  Level = Full
-  FileSet="Catalog"
-  Schedule = "WeeklyCycleAfterBackup"
-  # This creates an ASCII copy of the catalog
-  # Arguments to make_catalog_backup.pl are:
-  #  make_catalog_backup.pl <catalog-name>
-  RunBeforeJob = "/usr/libexec/bacula/make_catalog_backup.pl MyCatalog"
-  # This deletes the copy of the catalog
-  RunAfterJob  = "/usr/libexec/bacula/delete_catalog_backup"
-  Write Bootstrap = "/var/spool/bacula/%n.bsr"
-  Priority = 11                   # run after main backup
-}
+#Job {
+#  Name = "BackupCatalog"
+#  JobDefs = "DefaultJob"
+#  Client = testchris1
+#  Level = Full
+#  FileSet="Catalog"
+#  Schedule = "WeeklyCycleAfterBackup"
+#  # This creates an ASCII copy of the catalog
+#  # Arguments to make_catalog_backup.pl are:
+#  #  make_catalog_backup.pl <catalog-name>
+#  RunBeforeJob = "/usr/libexec/bacula/make_catalog_backup.pl MyCatalog"
+#  # This deletes the copy of the catalog
+#  RunAfterJob  = "/usr/libexec/bacula/delete_catalog_backup"
+#  Write Bootstrap = "/var/spool/bacula/%n.bsr"
+#  Priority = 11                   # run after main backup
+#}
 
 #
 # Standard Restore template, to be changed by Console program
 #  Only one such job is needed for all Jobs/Clients/Storage ...
 #
-Job {
-  Name = "RestoreFiles"
-  Type = Restore
-  Client=testchris1
-  FileSet="Full Set"                  
-  Storage = File                      
-  Pool = Default
-  Messages = Standard
-  Where = /tmp/bacula-restores
-}
+#Job {
+#  Name = "RestoreFiles"
+#  Type = Restore
+#  Client=testchris1
+#  FileSet="Full Set"                  
+#  Storage = File                      
+#  Pool = Default
+#  Messages = Standard
+#  Where = /tmp/bacula-restores
+#}
 
 
-# List of files to be backed up
-FileSet {
-  Name = "Full Set"
-  Include {
-    Options {
-      signature = MD5
-    }
-#    
-#  Put your list of files here, preceded by 'File =', one per line
-#    or include an external list with:
+## List of files to be backed up
+#FileSet {
+#  Name = "Full Set"
+#  Include {
+#    Options {
+#      signature = MD5
+#    }
+##    
+##  Put your list of files here, preceded by 'File =', one per line
+##    or include an external list with:
+##
+##    File = <file-name
+##
+##  Note: / backs up everything on the root partition.
+##    if you have other partitions such as /usr or /home
+##    you will probably want to add them too.
+##
+##  By default this is defined to point to the Bacula binary
+##    directory to give a reasonable FileSet to backup to
+##    disk storage during initial testing.
+##
+#    File = /usr/sbin
+#  }
 #
-#    File = <file-name
-#
-#  Note: / backs up everything on the root partition.
-#    if you have other partitions such as /usr or /home
-#    you will probably want to add them too.
-#
-#  By default this is defined to point to the Bacula binary
-#    directory to give a reasonable FileSet to backup to
-#    disk storage during initial testing.
-#
-    File = /usr/sbin
-  }
-
-#
-# If you backup the root directory, the following two excluded
-#   files can be useful
-#
-  Exclude {
-    File = /var/spool/bacula
-    File = /tmp
-    File = /proc
-    File = /tmp
-    File = /.journal
-    File = /.fsck
-  }
-}
+##
+## If you backup the root directory, the following two excluded
+##   files can be useful
+##
+#  Exclude {
+#    File = /var/spool/bacula
+#    File = /tmp
+#    File = /proc
+#    File = /tmp
+#    File = /.journal
+#    File = /.fsck
+#  }
+#}
 
 #
 # When to do the backups, full backup on first sunday of the month,
 #  differential (i.e. incremental since full) every other sunday,
 #  and incremental backups other days
-Schedule {
-  Name = "WeeklyCycle"
-  Run = Full 1st sun at 23:05
-  Run = Differential 2nd-5th sun at 23:05
-  Run = Incremental mon-sat at 23:05
-}
-
-# This schedule does the catalog. It starts after the WeeklyCycle
-Schedule {
-  Name = "WeeklyCycleAfterBackup"
-  Run = Full sun-sat at 23:10
-}
-
-# This is the backup of the catalog
-FileSet {
-  Name = "Catalog"
-  Include {
-    Options {
-      signature = MD5
-    }
-    File = "/var/spool/bacula/bacula.sql"
-  }
-}
+#Schedule {
+#  Name = "WeeklyCycle"
+#  Run = Full 1st sun at 23:05
+#  Run = Differential 2nd-5th sun at 23:05
+#  Run = Incremental mon-sat at 23:05
+#}
+#
+## This schedule does the catalog. It starts after the WeeklyCycle
+#Schedule {
+#  Name = "WeeklyCycleAfterBackup"
+#  Run = Full sun-sat at 23:10
+#}
+#
+## This is the backup of the catalog
+#FileSet {
+#  Name = "Catalog"
+#  Include {
+#    Options {
+#      signature = MD5
+#    }
+#    File = "/var/spool/bacula/bacula.sql"
+#  }
+#}
 
 # Client (File Services) to backup
 #Client {
@@ -182,7 +182,7 @@ FileSet {
 
 # Definition of file storage device
 Storage {
-  Name = File
+  Name = BTEST
 # Do not use "localhost" here    
   Address = testchris1.test
   SDPort = 9103
@@ -255,7 +255,7 @@ Messages {
 #
   mailcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula: %t %e of %c %l\" %r"
   operatorcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula: Intervention needed for %j\" %r"
-  mail = root@localhost = all, !skipped            
+  mail = systst@sra.fr, root@localhost = all, !skipped            
   operator = root@localhost = mount
   console = all, !skipped, !saved
 #
@@ -279,31 +279,31 @@ Messages {
 }
 
 # Default pool definition
-Pool {
-  Name = Default
-  Pool Type = Backup
-  Recycle = yes                       # Bacula can automatically recycle Volumes
-  AutoPrune = yes                     # Prune expired volumes
-  Volume Retention = 365 days         # one year
-}
+#Pool {
+#  Name = Default
+#  Pool Type = Backup
+#  Recycle = yes                       # Bacula can automatically recycle Volumes
+#  AutoPrune = yes                     # Prune expired volumes
+#  Volume Retention = 365 days         # one year
+#}
 
 # File Pool definition
-Pool {
-  Name = File
-  Pool Type = Backup
-  Recycle = yes                       # Bacula can automatically recycle Volumes
-  AutoPrune = yes                     # Prune expired volumes
-  Volume Retention = 365 days         # one year
-  Maximum Volume Bytes = 50G          # Limit Volume size to something reasonable
-  Maximum Volumes = 100               # Limit number of Volumes in Pool
-}
+#Pool {
+#  Name = BTEST
+#  Pool Type = Backup
+#  Recycle = yes                       # Bacula can automatically recycle Volumes
+#  AutoPrune = yes                     # Prune expired volumes
+#  #Volume Retention = 365 days         # one year
+#  #Maximum Volume Bytes = 50G          # Limit Volume size to something reasonable
+#  #Maximum Volumes = 100               # Limit number of Volumes in Pool
+#}
 
 
 # Scratch pool definition
-Pool {
-  Name = Scratch
-  Pool Type = Backup
-}
+#Pool {
+#  Name = Scratch
+#  Pool Type = Backup
+#}
 
 #
 # Restricted console used by tray-monitor to get the status of the director
@@ -320,8 +320,8 @@ Client {
   Address = testchris1.test
   FDPort = 9102
   Catalog = MyCatalog
-  File Retention = 30 days
-  Job Retention = 6 months
+  #File Retention = 30 days
+  #Job Retention = 6 months
 }
 
 Client {
@@ -330,8 +330,8 @@ Client {
   Address = testchris2.test
   FDPort = 9102
   Catalog = MyCatalog
-  File Retention = 30 days
-  Job Retention = 6 months
+  #File Retention = 30 days
+  #Job Retention = 6 months
 }
 
 Client {
@@ -340,64 +340,113 @@ Client {
   Address = testchris3.test
   FDPort = 9102
   Catalog = MyCatalog
-  File Retention = 30 days
-  Job Retention = 6 months
+  #File Retention = 30 days
+  #Job Retention = 6 months
+}
+
+Client {
+  Name = port-bron-007-fd
+  Password = racine
+  Address = 10.3.20.6
+  FDPort = 9102
+  Catalog = MyCatalog
+  #File Retention = 30 days
+  #Job Retention = 6 months
 }
 
 FileSet {
   Name = TEST_FS
   Include {
-    File = /home/rpm_oracle
+    File = /home/test_sauve
     Options {
     }
   }
 }
+
+FileSet {
+    Name = "PORT-007"
+
+    Include {
+        Options {
+        signature = MD5
+        }
+
+        #File = "C:/Users"
+        File = "C:/Program Files/Bacula"
+    }
+
+    Exclude {
+        #File = "C:/Users/*/Temporary Internet Files/*"
+        #File = "C:/Users/*/Firefox/*/Cache/*"
+        #File = "C:/Users/*/Downloads/*.exe"
+        #File = "C:/Users/*/Downloads/*.msi"
+    }
+}
+
+ 
+Schedule {
+  Name = "TOUTES_LES_5_MN"
+  Run = Level=Full hourly at 0:00
+  Run = Level=Full hourly at 0:05
+  Run = Level=Full hourly at 0:10
+  Run = Level=Full hourly at 0:15
+  Run = Level=Full hourly at 0:20
+  Run = Level=Full hourly at 0:25
+  Run = Level=Full hourly at 0:30
+  Run = Level=Full hourly at 0:35
+  Run = Level=Full hourly at 0:40
+  Run = Level=Full hourly at 0:45
+  Run = Level=Full hourly at 0:50
+  Run = Level=Full hourly at 0:55
+}
+
+## -------------------------------------------------
+## Ce pool ne conserve qu'un seul job
+## il cree un volume par JOB avec Le nom du job
+## -------------------------------------------------
 Pool {
   Name = BTEST
   Pool Type = Backup
-  Volume Retention = 1 days
   Recycle = yes
   AutoPrune = yes
-  LabelFormat = FILE
-  Maximum Volume Jobs = 1
+  VolumeRetention = 4 minutes
+  Use Volume Once  = yes
+  Maximum Volumes = 12
+  #LabelFormat = "JOB-${Job}-${Day:p/2/0/r}-${Hour:p/2/0/r}-${Minute:p/2/0/r}-${Second:p/2/0/r}"
+  LabelFormat = "JOB-${Job}"
 }
 
 Jobdefs {
   Name = BASIC_JOB
   Type = Backup
   Level = Full
-  Client = testchris1, testchris2
   FileSet = TEST_FS
-  Storage = File
+  Storage = BTEST
   Pool = BTEST
+  Schedule = "TOUTES_LES_5_MN"
   Messages = Standard
 }
 
 Job {
-    Name = T1
+    Name = CLIENT1
     JobDefs = BASIC_JOB
     Client = testchris1
 }
 
 Job {
-    Name = T2
+    Name = CLIENT2
     JobDefs = BASIC_JOB
     Client = testchris2
 }
 Job {
-    Name = T3
+    Name = CLIENT3
     JobDefs = BASIC_JOB
     Client = testchris3
 }
 
 Job {
-  Name = TEST2
-  Type = Verify
-  Level = Incremental
-  Client = testchris1, testchris2
-  FileSet = "Full Set"
-  Schedule = WeeklyCycle
-  Storage = File
-  Pool = Default
-  Messages = Standard
+    Name = CLIENT4
+    JobDefs = BASIC_JOB
+    Client = port-bron-007-fd
+    FileSet = PORT-007
 }
