--- a/bacula/old/bacula-sd.conf
+++ b/bacula/old/bacula-sd.conf
@@ -1,7 +1,7 @@
 #
 # Default Bacula Storage Daemon Configuration file
 #
-#  For Bacula release 5.0.0 (26 January 2010) -- redhat 
+#  For Bacula release 5.2.6 (21 February 2012) -- ubuntu 12.10
 #
 # You may need to change the name of your tape drive
 #   on the "Archive Device" directive in the Device
@@ -11,19 +11,20 @@
 #
 
 Storage {                             # definition of myself
-  Name = bacula-sd
-  SDport = 9103
-  WorkingDirectory = /var/spool/bacula
-  Pid Directory = "/var/run"
+  Name = chris-r61i-sd
+  SDPort = 9103                  # Director's port      
+  WorkingDirectory = "/var/lib/bacula"
+  Pid Directory = "/run/bacula"
   Maximum Concurrent Jobs = 20
+  SDAddress = 127.0.0.1
 }
 
 #
 # List Directors who are permitted to contact Storage daemon
 #
 Director {
-  Name = bacula-dir
-  Password = "racine"
+  Name = chris-r61i-dir
+  Password = "n5hMsqxx09f0VoxD0V4Fq5oZ3UIZEV-i3"
 }
 
 #
@@ -31,8 +32,8 @@ Director {
 #   status of the storage daemon
 #
 Director {
-  Name = bacula-mon
-  Password = "racine"
+  Name = chris-r61i-mon
+  Password = "7y6pfq8oJk6HZ2_8_jMFj3ik62MXCfu-v"
   Monitor = yes
 }
 
@@ -49,16 +50,16 @@ Director {
 #  same Name and MediaType. 
 #
 
-#Device {
-#  Name = FileStorage
-#  Media Type = File
-#  Archive Device = /tmp
-#  LabelMedia = yes;                   # lets Bacula label unlabeled media
-#  Random Access = Yes;
-#  AutomaticMount = yes;               # when device opened, read it
-#  RemovableMedia = no;
-#  AlwaysOpen = no;
-#}
+Device {
+  Name = FileStorage
+  Media Type = File
+  Archive Device = /home/chris/bacula/test/dev
+  LabelMedia = yes;                   # lets Bacula label unlabeled media
+  Random Access = Yes;
+  AutomaticMount = yes;               # when device opened, read it
+  RemovableMedia = no;
+  AlwaysOpen = no;
+}
 
 #
 # An autochanger device with two drives
@@ -67,7 +68,7 @@ Director {
 #  Name = Autochanger
 #  Device = Drive-1
 #  Device = Drive-2
-#  Changer Command = "/usr/libexec/bacula/mtx-changer %c %o %S %a %d"
+#  Changer Command = "/etc/bacula/scripts/mtx-changer %c %o %S %a %d"
 #  Changer Device = /dev/sg0
 #}
 
@@ -121,7 +122,7 @@ Director {
 #  RemovableMedia = yes;
 #  RandomAccess = no;
 #  Maximum File Size = 3GB
-## Changer Command = "/usr/libexec/bacula/mtx-changer %c %o %S %a %d"
+## Changer Command = "/etc/bacula/scripts/mtx-changer %c %o %S %a %d"
 ## Changer Device = /dev/sg0
 ## AutoChanger = yes
 #  # Enable the Alert command only if you have the mtx package loaded
@@ -142,7 +143,7 @@ Director {
 #  RemovableMedia = yes;
 #  RandomAccess = no;
 #  Maximum File Size = 4GB
-## Changer Command = "/usr/libexec/bacula/mtx-changer %c %o %S %a %d"
+## Changer Command = "/etc/bacula/scripts/mtx-changer %c %o %S %a %d"
 ## Changer Device = /dev/sg0
 ## AutoChanger = yes
 #  # Enable the Alert command only if you have the mtx package loaded
@@ -163,7 +164,7 @@ Director {
 #  RemovableMedia = yes;
 #  RandomAccess = no;
 #  Maximum File Size = 5GB
-## Changer Command = "/usr/libexec/bacula/mtx-changer %c %o %S %a %d"
+## Changer Command = "/etc/bacula/scripts/mtx-changer %c %o %S %a %d"
 ## Changer Device = /dev/sg0
 ## AutoChanger = yes
 #  # Enable the Alert command only if you have the mtx package loaded
@@ -201,27 +202,5 @@ Director {
 #
 Messages {
   Name = Standard
-  director = bacula-dir = all
-}
-
-Device {
-  Name = btest1
-  Archive Device = /home/bacula/t1
-  Media Type = File
-  LabelMedia = yes
-  Random Access = yes
-  AutomaticMount = yes
-  RemovableMedia = no
-  AlwaysOpen = no
-}
-
-Device {
-  Name = btest2
-  Archive Device = /home/bacula/t2
-  Media Type = File
-  LabelMedia = yes
-  Random Access = yes
-  AutomaticMount = yes
-  RemovableMedia = no
-  AlwaysOpen = no
+  director = chris-r61i-dir = all
 }
