--- a/bacula/bacula-fd.conf
+++ b/bacula/bacula-fd.conf
@@ -12,7 +12,7 @@
 #
 Director {
   Name = bacula-dir
-  Password = "racine"
+  Password = "centos"
 }
 
 #
@@ -21,7 +21,7 @@ Director {
 #
 Director {
   Name = bacula-mon
-  Password = "racine"
+  Password = "centos"
   Monitor = yes
 }
 
@@ -29,8 +29,8 @@ Director {
 # "Global" File daemon configuration specifications
 #
 FileDaemon {                          # this is me
-  Name = testchris1
-  FDport = 9102
+  Name = bacula-fd
+  FDport = 9102                  # where we listen for the director
   WorkingDirectory = /var/spool/bacula
   Pid Directory = /var/run
   Maximum Concurrent Jobs = 20
