--- a/bacula/bacula-sd.conf
+++ b/bacula/bacula-sd.conf
@@ -12,8 +12,8 @@
 
 Storage {                             # definition of myself
   Name = bacula-sd
-  SDport = 9103
-  WorkingDirectory = /var/spool/bacula
+  SDPort = 9103                  # Director's port      
+  WorkingDirectory = "/var/spool/bacula"
   Pid Directory = "/var/run"
   Maximum Concurrent Jobs = 20
 }
@@ -23,7 +23,7 @@ Storage {                             # definition of myself
 #
 Director {
   Name = bacula-dir
-  Password = "racine"
+  Password = "centos"
 }
 
 #
@@ -32,7 +32,7 @@ Director {
 #
 Director {
   Name = bacula-mon
-  Password = "racine"
+  Password = "centos"
   Monitor = yes
 }
 
@@ -49,16 +49,16 @@ Director {
 #  same Name and MediaType. 
 #
 
-#Device {
-#  Name = FileStorage
-#  Media Type = File
-#  Archive Device = /tmp
-#  LabelMedia = yes;                   # lets Bacula label unlabeled media
-#  Random Access = Yes;
-#  AutomaticMount = yes;               # when device opened, read it
-#  RemovableMedia = no;
-#  AlwaysOpen = no;
-#}
+Device {
+  Name = FILE_SAV_PROD
+  Media Type = File
+  Archive Device = /sav/dev/sav_prod/BACULA
+  LabelMedia = yes;                   # lets Bacula label unlabeled media
+  Random Access = Yes;
+  AutomaticMount = yes;               # when device opened, read it
+  RemovableMedia = no;
+  AlwaysOpen = yes;
+}
 
 #
 # An autochanger device with two drives
@@ -202,26 +202,4 @@ Director {
 Messages {
   Name = Standard
   director = bacula-dir = all
-}
-
-Device {
-  Name = btest1
-  Archive Device = /home/bacula/t1
-  Media Type = File
-  LabelMedia = yes
-  Random Access = yes
-  AutomaticMount = yes
-  RemovableMedia = no
-  AlwaysOpen = no
-}
-
-Device {
-  Name = btest2
-  Archive Device = /home/bacula/t2
-  Media Type = File
-  LabelMedia = yes
-  Random Access = yes
-  AutomaticMount = yes
-  RemovableMedia = no
-  AlwaysOpen = no
 }
