--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -19,223 +19,23 @@ Director {                            # define myself
   WorkingDirectory = "/var/spool/bacula"
   PidDirectory = "/var/run"
   Maximum Concurrent Jobs = 1
-  Password = "racine"         # Console password
+  Password = "centos"         # Console password
   Messages = Daemon
 }
 
-#JobDefs {
-#  Name = "DefaultJob"
-#  Type = Backup
-#  Level = Incremental
-#  #Client = bacula-fd 
-#  FileSet = "Full Set"
-#  Schedule = "WeeklyCycle"
-#  Storage = File
-#  Messages = Standard
-#  Pool = File
-#  Priority = 10
-#  Write Bootstrap = "/var/spool/bacula/%c.bsr"
-#}
 
-
-#
-# Define the main nightly save backup job
-#   By default, this job will back up to disk in /tmp
-#Job {
-#  Name = "BackupClient1"
-#  JobDefs = "DefaultJob"
-#}
-
-#Job {
-#  Name = "BackupClient2"
-#  Client = bacula2-fd
-#  JobDefs = "DefaultJob"
-#}
-
-# Backup the catalog database (after the nightly save)
-#Job {
-#  Name = "BackupCatalog"
-#  JobDefs = "DefaultJob"
-#  Client = testchris1
-#  Level = Full
-#  FileSet="Catalog"
-#  Schedule = "WeeklyCycleAfterBackup"
-#  # This creates an ASCII copy of the catalog
-#  # Arguments to make_catalog_backup.pl are:
-#  #  make_catalog_backup.pl <catalog-name>
-#  RunBeforeJob = "/usr/libexec/bacula/make_catalog_backup.pl MyCatalog"
-#  # This deletes the copy of the catalog
-#  RunAfterJob  = "/usr/libexec/bacula/delete_catalog_backup"
-#  Write Bootstrap = "/var/spool/bacula/%n.bsr"
-#  Priority = 11                   # run after main backup
-#}
-
-#
-# Standard Restore template, to be changed by Console program
-#  Only one such job is needed for all Jobs/Clients/Storage ...
-#
-#Job {
-#  Name = "RestoreFiles"
-#  Type = Restore
-#  Client=testchris1
-#  FileSet="Full Set"                  
-#  Storage = File                      
-#  Pool = Default
-#  Messages = Standard
-#  Where = /tmp/bacula-restores
-#}
-
-
-## List of files to be backed up
-#FileSet {
-#  Name = "Full Set"
-#  Include {
-#    Options {
-#      signature = MD5
-#    }
-##    
-##  Put your list of files here, preceded by 'File =', one per line
-##    or include an external list with:
 ##
-##    File = <file-name
+## INCLUDE 
 ##
-##  Note: / backs up everything on the root partition.
-##    if you have other partitions such as /usr or /home
-##    you will probably want to add them too.
-##
-##  By default this is defined to point to the Bacula binary
-##    directory to give a reasonable FileSet to backup to
-##    disk storage during initial testing.
-##
-#    File = /usr/sbin
-#  }
-#
-##
-## If you backup the root directory, the following two excluded
-##   files can be useful
-##
-#  Exclude {
-#    File = /var/spool/bacula
-#    File = /tmp
-#    File = /proc
-#    File = /tmp
-#    File = /.journal
-#    File = /.fsck
-#  }
-#}
 
-#
-# When to do the backups, full backup on first sunday of the month,
-#  differential (i.e. incremental since full) every other sunday,
-#  and incremental backups other days
-#Schedule {
-#  Name = "WeeklyCycle"
-#  Run = Full 1st sun at 23:05
-#  Run = Differential 2nd-5th sun at 23:05
-#  Run = Incremental mon-sat at 23:05
-#}
-#
-## This schedule does the catalog. It starts after the WeeklyCycle
-#Schedule {
-#  Name = "WeeklyCycleAfterBackup"
-#  Run = Full sun-sat at 23:10
-#}
-#
-## This is the backup of the catalog
-#FileSet {
-#  Name = "Catalog"
-#  Include {
-#    Options {
-#      signature = MD5
-#    }
-#    File = "/var/spool/bacula/bacula.sql"
-#  }
-#}
+@!!BACULA_TRAV!!bacula-dir-jobs.conf
+@!!BACULA_TRAV!!bacula-dir-filesets.conf
+@!!BACULA_TRAV!!bacula-dir-clients.conf
+@!!BACULA_TRAV!!bacula-dir-schedules.conf
+@!!BACULA_TRAV!!bacula-dir-pools.conf
+@!!BACULA_TRAV!!bacula-dir-storage.conf
+@!!BACULA_TRAV!!bacula-dir-catalog.conf
 
-# Client (File Services) to backup
-#Client {
-#  Name = bacula-fd
-#  Address = client.example.com
-#  FDPort = 9102
-#  Catalog = MyCatalog
-#  Password = "racine"          # password for FileDaemon
-#  File Retention = 30 days            # 30 days
-#  Job Retention = 6 months            # six months
-#  AutoPrune = yes                     # Prune expired Jobs/Files
-#}
-
-#
-# Second Client (File Services) to backup
-#  You should change Name, Address, and Password before using
-#
-#Client {
-#  Name = bacula2-fd                
-#  Address = client2.example.com
-#  FDPort = 9102
-#  Catalog = MyCatalog
-#  Password = "@@FD_PASSWORD@@2"         # password for FileDaemon 2
-#  File Retention = 30 days            # 30 days
-#  Job Retention = 6 months            # six months
-#  AutoPrune = yes                     # Prune expired Jobs/Files
-#}
-
-
-# Definition of file storage device
-Storage {
-  Name = BTEST
-# Do not use "localhost" here    
-  Address = testchris1.test
-  SDPort = 9103
-  Password = "racine"
-  #Device = FileStorage
-  Device = btest1
-  Media Type = File
-}
-
-
-
-# Definition of DDS tape storage device
-#Storage {
-#  Name = DDS-4    
-#  Do not use "localhost" here
-#  Address = storage.example.com                # N.B. Use a fully qualified name here
-#  SDPort = 9103
-#  Password = "@@SD_PASSWORD@@"          # password for Storage daemon
-#  Device = DDS-4                      # must be same as Device in Storage daemon
-#  Media Type = DDS-4                  # must be same as MediaType in Storage daemon
-#  Autochanger = yes                   # enable for autochanger device
-#}
-
-# Definition of 8mm tape storage device
-#Storage {
-#  Name = "8mmDrive"
-#  Do not use "localhost" here
-#  Address = storage.example.com                # N.B. Use a fully qualified name here
-#  SDPort = 9103
-#  Password = "@@SD_PASSWORD@@"
-#  Device = "Exabyte 8mm"
-#  MediaType = "8mm"
-#}
-
-# Definition of DVD storage device
-#Storage {
-#  Name = "DVD"
-#  Do not use "localhost" here
-#  Address = storage.example.com                # N.B. Use a fully qualified name here
-#  SDPort = 9103
-#  Password = "@@SD_PASSWORD@@"
-#  Device = "DVD Writer"
-#  MediaType = "DVD"
-#}
-
-
-# Generic catalog service
-Catalog {
-  Name = MyCatalog
-# Uncomment the following line if you want the dbi driver
-# dbdriver = "dbi:sqlite3"; dbaddress = 127.0.0.1; dbport =  
-  dbname = "bacula"; dbuser = "bacula"; dbpassword = ""
-}
 
 # Reasonable message delivery -- send most everything to email address
 #  and to the console
@@ -255,7 +55,7 @@ Messages {
 #
   mailcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula: %t %e of %c %l\" %r"
   operatorcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula: Intervention needed for %j\" %r"
-  mail = systst@sra.fr, root@localhost = all, !skipped            
+  mail = root@localhost = all, !skipped            
   operator = root@localhost = mount
   console = all, !skipped, !saved
 #
@@ -278,175 +78,11 @@ Messages {
   append = "/var/log/bacula.log" = all, !skipped
 }
 
-# Default pool definition
-#Pool {
-#  Name = Default
-#  Pool Type = Backup
-#  Recycle = yes                       # Bacula can automatically recycle Volumes
-#  AutoPrune = yes                     # Prune expired volumes
-#  Volume Retention = 365 days         # one year
-#}
-
-# File Pool definition
-#Pool {
-#  Name = BTEST
-#  Pool Type = Backup
-#  Recycle = yes                       # Bacula can automatically recycle Volumes
-#  AutoPrune = yes                     # Prune expired volumes
-#  #Volume Retention = 365 days         # one year
-#  #Maximum Volume Bytes = 50G          # Limit Volume size to something reasonable
-#  #Maximum Volumes = 100               # Limit number of Volumes in Pool
-#}
-
-
-# Scratch pool definition
-#Pool {
-#  Name = Scratch
-#  Pool Type = Backup
-#}
-
 #
 # Restricted console used by tray-monitor to get the status of the director
 #
 Console {
   Name = bacula-mon
-  Password = "racine"
+  Password = "centos"
   CommandACL = status, .status
-}
-## Le serveur
-Client {
-  Name = testchris1
-  Password = racine
-  Address = testchris1.test
-  FDPort = 9102
-  Catalog = MyCatalog
-  #File Retention = 30 days
-  #Job Retention = 6 months
-}
-
-Client {
-  Name = testchris2
-  Password = racine
-  Address = testchris2.test
-  FDPort = 9102
-  Catalog = MyCatalog
-  #File Retention = 30 days
-  #Job Retention = 6 months
-}
-
-Client {
-  Name = testchris3
-  Password = racine
-  Address = testchris3.test
-  FDPort = 9102
-  Catalog = MyCatalog
-  #File Retention = 30 days
-  #Job Retention = 6 months
-}
-
-Client {
-  Name = port-bron-007-fd
-  Password = racine
-  Address = 10.3.20.6
-  FDPort = 9102
-  Catalog = MyCatalog
-  #File Retention = 30 days
-  #Job Retention = 6 months
-}
-
-FileSet {
-  Name = TEST_FS
-  Include {
-    File = /home/test_sauve
-    Options {
-    }
-  }
-}
-
-FileSet {
-    Name = "PORT-007"
-
-    Include {
-        Options {
-        signature = MD5
-        }
-
-        #File = "C:/Users"
-        File = "C:/Program Files/Bacula"
-    }
-
-    Exclude {
-        #File = "C:/Users/*/Temporary Internet Files/*"
-        #File = "C:/Users/*/Firefox/*/Cache/*"
-        #File = "C:/Users/*/Downloads/*.exe"
-        #File = "C:/Users/*/Downloads/*.msi"
-    }
-}
-
- 
-Schedule {
-  Name = "TOUTES_LES_5_MN"
-  Run = Level=Full hourly at 0:00
-  Run = Level=Full hourly at 0:05
-  Run = Level=Full hourly at 0:10
-  Run = Level=Full hourly at 0:15
-  Run = Level=Full hourly at 0:20
-  Run = Level=Full hourly at 0:25
-  Run = Level=Full hourly at 0:30
-  Run = Level=Full hourly at 0:35
-  Run = Level=Full hourly at 0:40
-  Run = Level=Full hourly at 0:45
-  Run = Level=Full hourly at 0:50
-  Run = Level=Full hourly at 0:55
-}
-
-## -------------------------------------------------
-## Ce pool ne conserve qu'un seul job
-## il cree un volume par JOB avec Le nom du job
-## -------------------------------------------------
-Pool {
-  Name = BTEST
-  Pool Type = Backup
-  Recycle = yes
-  AutoPrune = yes
-  VolumeRetention = 4 minutes
-  Use Volume Once  = yes
-  Maximum Volumes = 12
-  #LabelFormat = "JOB-${Job}-${Day:p/2/0/r}-${Hour:p/2/0/r}-${Minute:p/2/0/r}-${Second:p/2/0/r}"
-  LabelFormat = "JOB-${Job}"
-}
-
-Jobdefs {
-  Name = BASIC_JOB
-  Type = Backup
-  Level = Full
-  FileSet = TEST_FS
-  Storage = BTEST
-  Pool = BTEST
-  Schedule = "TOUTES_LES_5_MN"
-  Messages = Standard
-}
-
-Job {
-    Name = CLIENT1
-    JobDefs = BASIC_JOB
-    Client = testchris1
-}
-
-Job {
-    Name = CLIENT2
-    JobDefs = BASIC_JOB
-    Client = testchris2
-}
-Job {
-    Name = CLIENT3
-    JobDefs = BASIC_JOB
-    Client = testchris3
-}
-
-Job {
-    Name = CLIENT4
-    JobDefs = BASIC_JOB
-    Client = port-bron-007-fd
-    FileSet = PORT-007
 }
