Premier test avec de gros volumes on verra demain

--- a/bacula/bacula-dir-clients.conf
+++ b/bacula/bacula-dir-clients.conf
@@ -1,4 +1,4 @@
-# Client (File Services) to backup
+# Serveur BACULA (vm-bacula-bron)
 Client {
   Name = bacula-fd
   Address = vm-bacula-bron.groupe-sra.lan
@@ -10,19 +10,26 @@ Client {
   AutoPrune = yes                     # Prune expired Jobs/Files
 }
 
-#
-# Second Client (File Services) to backup
-#  You should change Name, Address, and Password before using
-#
-#Client {
-#  Name = bacula2-fd                
-#  Address = client2.example.com
-#  FDPort = 9102
-#  Catalog = MyCatalog
-#  Password = "@@FD_PASSWORD@@2"         # password for FileDaemon 2
-#  File Retention = 30 days            # 30 days
-#  Job Retention = 6 months            # six months
-#  AutoPrune = yes                     # Prune expired Jobs/Files
-#}
+# Serveur testchris3
+Client {
+  Name = testchris3
+  Address = testchris3.test
+  FDPort = 9102
+  Catalog = MyCatalog
+  Password = "racine"          # password for FileDaemon
+  File Retention = 30 days            # 30 days
+  Job Retention = 6 months            # six months
+  AutoPrune = yes                     # Prune expired Jobs/Files
+}
 
-
+# Serveur FICHIERS
+Client {
+  Name = fichiers
+  Address = VM-FICHIERS01-BRON
+  FDPort = 9102
+  Catalog = MyCatalog
+  Password = "racine"          # password for FileDaemon
+  File Retention = 30 days            # 30 days
+  Job Retention = 6 months            # six months
+  AutoPrune = yes                     # Prune expired Jobs/Files
+}
