--- a/bacula/bacula-dir-schedules.conf
+++ b/bacula/bacula-dir-schedules.conf
@@ -15,3 +15,21 @@ Schedule {
   Run = Full sun-sat at 23:10
 }
 
+# This schedule does the catalog. It starts after the WeeklyCycle
+Schedule {
+  Name = "CATALOG"
+  Run = Full daily at 02:00
+}
+
+# This schedule does the catalog. It starts after the WeeklyCycle
+Schedule {
+  Name = "FULL_DAILY"
+  Run = Full daily at 22:00
+}
+
+
+
+
+
+
+
