--- a/bacula/bacula-dir-storage.conf
+++ b/bacula/bacula-dir-storage.conf
@@ -1,6 +1,6 @@
 # Definition of file storage device
 Storage {
-  Name = File
+  Name = SAV_PROD_FILE
 # Do not use "localhost" here    
   Address = vm-bacula-bron.groupe-sra.lan
   SDPort = 9103
