--- a/bacula/bacula-dir-jobs.conf
+++ b/bacula/bacula-dir-jobs.conf
@@ -1,3 +1,4 @@
+## DEFAULT
 JobDefs {
   Name = "DefaultJob"
   Type = Backup
@@ -5,28 +6,29 @@ JobDefs {
   Client = bacula-fd 
   FileSet = "Full Set"
   Schedule = "WeeklyCycle"
-  Storage = File
+  Storage = SAV_PROD_FILE
   Messages = Standard
-  Pool = File
+  Pool = SAV_PROD_FILE
   Priority = 10
   Write Bootstrap = "/var/spool/bacula/%c.bsr"
 }
 
+# DEFAULT
+FileSet {
+  Name = "Full Set"
+  Include {
+    Options {
+      signature = MD5
+    }
+  	File = /tmp
+  }
 
-#
-# Define the main nightly save backup job
-#   By default, this job will back up to disk in /tmp
-Job {
-  Name = "BackupClient1"
-  level = Full
-  JobDefs = "DefaultJob"
+  Exclude {
+    File = /var/spool/bacula
+    File = /proc
+    File = /tmp
+  }
 }
-
-#Job {
-#  Name = "BackupClient2"
-#  Client = bacula2-fd
-#  JobDefs = "DefaultJob"
-#}
 
 # Backup the catalog database (after the nightly save)
 Job {
@@ -34,14 +36,15 @@ Job {
   JobDefs = "DefaultJob"
   Level = Full
   FileSet="Catalog"
-  Schedule = "WeeklyCycleAfterBackup"
+  Schedule = "CATALOG"
   # This creates an ASCII copy of the catalog
   # Arguments to make_catalog_backup.pl are:
   #  make_catalog_backup.pl <catalog-name>
   RunBeforeJob = "/usr/libexec/bacula/make_catalog_backup.pl MyCatalog"
   # This deletes the copy of the catalog
   RunAfterJob  = "/usr/libexec/bacula/delete_catalog_backup"
-  Write Bootstrap = "/var/spool/bacula/%n.bsr"
+  Write Bootstrap = "/sav/dev/sav_prod/BACULA/%n.bsr"
+  #Write Bootstrap = "/var/spool/bacula/%c.bsr"
   Priority = 11                   # run after main backup
 }
 
@@ -54,8 +57,130 @@ Job {
   Type = Restore
   Client=bacula-fd                 
   FileSet="Full Set"                  
-  Storage = File                      
+  Storage = SAV_PROD_FILE
   Pool = Default
   Messages = Standard
   Where = /tmp/bacula-restores
 }
+
+
+# This is the backup of the catalog
+FileSet {
+  Name = "Catalog"
+  Include {
+    Options {
+      signature = MD5
+    }
+    File = "/var/spool/bacula/bacula.sql"
+  }
+}
+
+## ----------------------------
+## Sauvegarde SERVEUR BACULA
+## ----------------------------
+Job {
+	Name = "SAV_BACULA"
+  	Type = Backup
+	level = Full
+	Client = bacula-fd
+	FileSet = "SAV_BACULA_FILESET"
+	Schedule = "FULL_DAILY"
+	Storage = SAV_PROD_FILE
+	Messages = Standard
+	Pool = SAV_PROD_FILE
+	Priority = 10
+	Write Bootstrap = "/sav/dev/sav_prod/BACULA/%c.bsr"
+}
+
+# SAV_BACULA
+FileSet {
+  Name = "SAV_BACULA_FILESET"
+  Include {
+    Options {
+      signature = MD5
+    }
+  	File = /
+	File = /boot
+  }
+
+  Exclude {
+    File = /var/spool/bacula
+    File = /proc
+    File = /tmp
+	### Repertoire de sauvegarde disque
+	File = /sav
+  }
+}
+
+## ---------------------
+# SAV_TESTCHRIS3
+## ---------------------
+Job {
+	Name = "SAV_TESTCHRIS3"
+  	Type = Backup
+	level = Full
+	Client = testchris3
+	FileSet = "SAV_TESTCHRIS3_FILESET"
+	Schedule = "FULL_DAILY"
+	Storage = SAV_PROD_FILE
+	Messages = Standard
+	Pool = SAV_PROD_FILE
+	Priority = 10
+	Write Bootstrap = "/sav/dev/sav_prod/BACULA/%c.bsr"
+}
+
+# SAV_TESTCHRIS3
+FileSet {
+  Name = "SAV_TESTCHRIS3_FILESET"
+  Include {
+    Options {
+      signature = MD5
+    }
+  	File = /
+  	File = /home
+  	File = /boot
+  }
+
+  Exclude {
+    File = /var/spool/bacula
+    File = /tmp
+    File = /proc
+  }
+}
+
+## ---------------------
+# SAV_FICHIERS
+## ---------------------
+Job {
+	Name = "SAV_FICHIERS"
+  	Type = Backup
+	level = Full
+	Client = fichiers
+	FileSet = "SAV_FICHIERS_FILESET"
+	Schedule = "FULL_DAILY"
+	Storage = SAV_PROD_FILE
+	Messages = Standard
+	Pool = SAV_PROD_FILE
+	Priority = 10
+	Write Bootstrap = "/sav/dev/sav_prod/BACULA/%c.bsr"
+}
+
+# SAV_FICHIERS
+FileSet {
+  Name = "SAV_FICHIERS_FILESET"
+  Include {
+    Options {
+      signature = MD5
+    }
+  	File = /
+  	File = /home
+	File = /boot
+  }
+
+  Exclude {
+    File = /var/spool/bacula
+    File = /tmp
+    File = /proc
+  }
+}
+
