--- a/bacula/bacula-dir-pools.conf
+++ b/bacula/bacula-dir-pools.conf
@@ -9,13 +9,14 @@ Pool {
 
 # File Pool definition
 Pool {
-  Name = File
+  Name = SAV_PROD_FILE
   Pool Type = Backup
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
-  Volume Retention = 365 days         # one year
-  Maximum Volume Bytes = 50G          # Limit Volume size to something reasonable
-  Maximum Volumes = 100               # Limit number of Volumes in Pool
+  Volume Retention = 23 hours
+  Maximum Volume Bytes = 1500G          # Limit Volume size to something reasonable
+  Maximum Volume Jobs = 1
+  Label Format = "${Level}_${Job}_${Year}-${Month:p/2/0/r}-${Day:p/2/0/r}_${Hour:p/2/0/r}${Minute:p/2/0/r}"
 }
 
 
